--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <main>
-        <section id="Login">
+        <section id="login">
 
             <div id="imagem">
-                foto
+                <!--Aqui vai a foto na CSS-->
             </div>
 
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem vindo(a). Faça o login para acessar as suas contas e fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post">
-                    
+
                 </form>
             </div>
 
