--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" required minlength="8">
                         <label for="isenha">Senha</label>
                     </div>
+
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha</a>
+                    <a href="esqueci.html" class="botao">Esqueci a senha</a>
                 </form>
             </div>
 
